@@ -26,33 +26,35 @@ import javax.annotation.PostConstruct;
 import javax.inject.Inject;
 
 import org.apache.log4j.Logger;
+import org.springframework.stereotype.Component;
 import org.apache.cloudstack.usage.UsageTypes;
 
-import com.cloud.usage.UsageServer;
 import com.cloud.usage.UsageVMInstanceVO;
 import com.cloud.usage.UsageVO;
 import com.cloud.usage.dao.UsageDao;
 import com.cloud.usage.dao.UsageVMInstanceDao;
 import com.cloud.user.AccountVO;
 import com.cloud.utils.Pair;
-import org.springframework.stereotype.Component;
+import com.cloud.utils.StringUtils;
 
 @Component
 public class VMInstanceUsageParser {
     public static final Logger s_logger = Logger.getLogger(VMInstanceUsageParser.class.getName());
 
-    private static UsageDao m_usageDao;
-    private static UsageVMInstanceDao m_usageInstanceDao;
+    private static UsageDao s_usageDao;
+    private static UsageVMInstanceDao s_usageInstanceDao;
 
-    @Inject private UsageDao _usageDao;;
-    @Inject private UsageVMInstanceDao _usageInstanceDao;
-    
+    @Inject
+    private UsageDao _usageDao;;
+    @Inject
+    private UsageVMInstanceDao _usageInstanceDao;
+
     @PostConstruct
     void init() {
-    	m_usageDao = _usageDao;
-    	m_usageInstanceDao = _usageInstanceDao;
+        s_usageDao = _usageDao;
+        s_usageInstanceDao = _usageInstanceDao;
     }
-    
+
     public static boolean parse(AccountVO account, Date startDate, Date endDate) {
         if (s_logger.isDebugEnabled()) {
             s_logger.debug("Parsing all VMInstance usage events for account: " + account.getId());
@@ -66,14 +68,14 @@ public class VMInstanceUsageParser {
         //     - look for an entry for accountId with end date in the given range
         //     - look for an entry for accountId with end date null (currently running vm or owned IP)
         //     - look for an entry for accountId with start date before given range *and* end date after given range
-        List<UsageVMInstanceVO> usageInstances = m_usageInstanceDao.getUsageRecords(account.getId(), startDate, endDate);
+        List<UsageVMInstanceVO> usageInstances = s_usageInstanceDao.getUsageRecords(account.getId(), startDate, endDate);
 //ToDo: Add domainID for getting usage records
-        
+
         // This map has both the running time *and* the usage amount.
         Map<String, Pair<String, Long>> usageVMUptimeMap = new HashMap<String, Pair<String, Long>>();
         Map<String, Pair<String, Long>> allocatedVMMap = new HashMap<String, Pair<String, Long>>();
 
-        Map<String, VMInfo> vmServiceOfferingMap = new HashMap<String, VMInfo>();
+        Map<String, VMInfo> vmInfosMap = new HashMap<String, VMInfo>();
 
         // loop through all the usage instances, create a usage record for each
         for (UsageVMInstanceVO usageInstance : usageInstances) {
@@ -82,10 +84,13 @@ public class VMInstanceUsageParser {
             long zoneId = usageInstance.getZoneId();
             long tId = usageInstance.getTemplateId();
             int usageType = usageInstance.getUsageType();
-            String key = vmId + "-" + soId + "-" + usageType;
+            Long cpuCores = usageInstance.getCpuCores();
+            Long cpuSpeed = usageInstance.getCpuSpeed();
+            Long memory = usageInstance.getMemory();
+            String key = StringUtils.join("-", vmId, soId, usageType, cpuCores, cpuSpeed, memory);
 
-            // store the info in the service offering map
-            vmServiceOfferingMap.put(key, new VMInfo(vmId, zoneId, soId, tId, usageInstance.getHypervisorType()));
+            // store the info in the VMs map
+            vmInfosMap.put(key, new VMInfo(vmId, zoneId, soId, tId, usageInstance.getHypervisorType(), cpuCores, cpuSpeed, memory));
 
             Date vmStartDate = usageInstance.getStartDate();
             Date vmEndDate = usageInstance.getEndDate();
@@ -102,12 +107,12 @@ public class VMInstanceUsageParser {
             long currentDuration = (vmEndDate.getTime() - vmStartDate.getTime()) + 1; // make sure this is an inclusive check for milliseconds (i.e. use n - m + 1 to find total number of millis to charge)
 
             switch (usageType) {
-            case UsageTypes.ALLOCATED_VM:
-                updateVmUsageData(allocatedVMMap, key, usageInstance.getVmName(), currentDuration);
-                break;
-            case UsageTypes.RUNNING_VM:
-                updateVmUsageData(usageVMUptimeMap, key, usageInstance.getVmName(), currentDuration);
-                break;
+                case UsageTypes.ALLOCATED_VM:
+                    updateVmUsageData(allocatedVMMap, key, usageInstance.getVmName(), currentDuration);
+                    break;
+                case UsageTypes.RUNNING_VM:
+                    updateVmUsageData(usageVMUptimeMap, key, usageInstance.getVmName(), currentDuration);
+                    break;
             }
         }
 
@@ -117,9 +122,9 @@ public class VMInstanceUsageParser {
 
             // Only create a usage record if we have a runningTime of bigger than zero.
             if (runningTime > 0L) {
-                VMInfo info = vmServiceOfferingMap.get(vmIdKey);
-                createUsageRecord(UsageTypes.RUNNING_VM, runningTime, startDate, endDate, account, info.getVirtualMachineId(), vmUptimeInfo.first(), info.getZoneId(), 
-                        info.getServiceOfferingId(), info.getTemplateId(), info.getHypervisorType());
+                VMInfo info = vmInfosMap.get(vmIdKey);
+                createUsageRecord(UsageTypes.RUNNING_VM, runningTime, startDate, endDate, account, info.getVirtualMachineId(), vmUptimeInfo.first(), info.getZoneId(),
+                    info.getServiceOfferingId(), info.getTemplateId(), info.getHypervisorType(), info.getCpuCores(), info.getCpuSpeed(), info.getMemory());
             }
         }
 
@@ -129,9 +134,9 @@ public class VMInstanceUsageParser {
 
             // Only create a usage record if we have a runningTime of bigger than zero.
             if (allocatedTime > 0L) {
-                VMInfo info = vmServiceOfferingMap.get(vmIdKey);
-                createUsageRecord(UsageTypes.ALLOCATED_VM, allocatedTime, startDate, endDate, account, info.getVirtualMachineId(), vmAllocInfo.first(), info.getZoneId(), 
-                        info.getServiceOfferingId(), info.getTemplateId(), info.getHypervisorType());
+                VMInfo info = vmInfosMap.get(vmIdKey);
+                createUsageRecord(UsageTypes.ALLOCATED_VM, allocatedTime, startDate, endDate, account, info.getVirtualMachineId(), vmAllocInfo.first(), info.getZoneId(),
+                    info.getServiceOfferingId(), info.getTemplateId(), info.getHypervisorType(), info.getCpuCores(), info.getCpuSpeed(), info.getMemory());
             }
         }
 
@@ -150,7 +155,8 @@ public class VMInstanceUsageParser {
         usageDataMap.put(key, vmUsageInfo);
     }
 
-    private static void createUsageRecord(int type, long runningTime, Date startDate, Date endDate, AccountVO account, long vmId, String vmName, long zoneId, long serviceOfferingId, long templateId, String hypervisorType) {
+    private static void createUsageRecord(int type, long runningTime, Date startDate, Date endDate, AccountVO account, long vmId, String vmName, long zoneId,
+        long serviceOfferingId, long templateId, String hypervisorType, Long cpuCores, Long cpuSpeed, Long memory) {
         // Our smallest increment is hourly for now
         if (s_logger.isDebugEnabled()) {
             s_logger.debug("Total running time " + runningTime + "ms");
@@ -162,7 +168,8 @@ public class VMInstanceUsageParser {
         String usageDisplay = dFormat.format(usage);
 
         if (s_logger.isDebugEnabled()) {
-            s_logger.debug("Creating VM usage record for vm: " + vmName + ", type: " + type + ", usage: " + usageDisplay + ", startDate: " + startDate + ", endDate: " + endDate + ", for account: " + account.getId());
+            s_logger.debug("Creating VM usage record for vm: " + vmName + ", type: " + type + ", usage: " + usageDisplay + ", startDate: " + startDate + ", endDate: " +
+                endDate + ", for account: " + account.getId());
         }
 
         // Create the usage record
@@ -173,40 +180,63 @@ public class VMInstanceUsageParser {
             usageDesc += " running time";
         }
         usageDesc += " (ServiceOffering: " + serviceOfferingId + ") (Template: " + templateId + ")";
-        UsageVO usageRecord = new UsageVO(Long.valueOf(zoneId), account.getId(), account.getDomainId(), usageDesc, usageDisplay + " Hrs", type,
-                new Double(usage), Long.valueOf(vmId), vmName, Long.valueOf(serviceOfferingId), Long.valueOf(templateId), Long.valueOf(vmId), startDate, endDate, hypervisorType);
-        m_usageDao.persist(usageRecord);
+        UsageVO usageRecord =
+            new UsageVO(Long.valueOf(zoneId), account.getId(), account.getDomainId(), usageDesc, usageDisplay + " Hrs", type, new Double(usage), Long.valueOf(vmId),
+                vmName, cpuCores, cpuSpeed, memory, Long.valueOf(serviceOfferingId), Long.valueOf(templateId), Long.valueOf(vmId), startDate, endDate, hypervisorType);
+        s_usageDao.persist(usageRecord);
     }
 
     private static class VMInfo {
-        private long virtualMachineId;
-        private long zoneId;
-        private long serviceOfferingId;
-        private long templateId;
-        private String hypervisorType;
+        private final long virtualMachineId;
+        private final long zoneId;
+        private final long serviceOfferingId;
+        private final long templateId;
+        private final String hypervisorType;
+        private final Long cpuCores;
+        private final Long cpuSpeed;
+        private final Long memory;
 
-        public VMInfo(long vmId, long zId, long soId, long tId, String hypervisorType) {
+        public VMInfo(long vmId, long zId, long soId, long tId, String hypervisorType, Long cpuCores, Long cpuSpeed, Long memory) {
             virtualMachineId = vmId;
             zoneId = zId;
             serviceOfferingId = soId;
             templateId = tId;
             this.hypervisorType = hypervisorType;
+            this.cpuCores = cpuCores;
+            this.cpuSpeed = cpuSpeed;
+            this.memory = memory;
         }
 
         public long getZoneId() {
             return zoneId;
         }
+
         public long getVirtualMachineId() {
             return virtualMachineId;
         }
+
         public long getServiceOfferingId() {
             return serviceOfferingId;
         }
+
         public long getTemplateId() {
             return templateId;
         }
-        private String getHypervisorType(){
+
+        private String getHypervisorType() {
             return hypervisorType;
+        }
+
+        public Long getCpuCores() {
+            return cpuCores;
+        }
+
+        public Long getCpuSpeed() {
+            return cpuSpeed;
+        }
+
+        public Long getMemory() {
+            return memory;
         }
     }
 }
